# konnektoren-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  docker-compose.yml  example.env  prometheus.yml
.github/workflows/: docker.yml
src/: lib.rs  main.rs  metrics.rs  telemetry.rs
src/compatibility/: legacy_performance_record.rs  mod.rs
src/middleware/: metrics.rs  mod.rs  trace.rs
src/routes/: health.rs  mod.rs  openapi.rs
src/routes/v1/: challenge_presence.rs  chat.rs  claim.rs  coupon.rs  leaderboard.rs  mod.rs  profile.rs  review.rs  router.rs
src/routes/v2/: claim.rs  mod.rs
src/services/v1/: claim.rs  coupon.rs  leaderboard.rs  mod.rs  profile.rs  review.rs
src/services/v2/: claim.rs
src/storage/: coupon_repository.rs  error.rs  leaderboard_repository.rs  memory_repository.rs  mod.rs  profile_repository.rs  redis_storage.rs  review_repository.rs  windowed_counter_repository.rs
src/ton/: claim.rs  client.rs  mod.rs  testnet-global.config.json  transfer.rs
