[package]
name = "konnektoren-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "konnektoren-api"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
axum = "0.7"
base64 = "0.22.1"
chrono = "0.4.38"
konnektoren-core = { git = "https://github.com/konnektoren/konnektoren-rs.git", default-features = false }
log = "0.4.21"
num-bigint = "0.4.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonlib = { git = "https://github.com/ston-fi/tonlib-rs.git", optional = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
utoipa = { version = "4.2.3", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "5", features = ["axum"], optional = true }
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
redis = { version = "0.25.4", features = [
    "tokio-comp",
    "json",
], optional = true }
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
mockall = "0.12.1"

[features]
default = ["openapi"]
openapi = ["utoipa", "utoipa-swagger-ui"]
ton = ["tonlib"]
redis = ["dep:redis"]
