[package]
name = "konnektoren-api"
version = "0.1.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "konnektoren-api"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
axum = "0.7"
base64 = "0.22.1"
chrono = "0.4.38"
http = "1.2.0"
konnektoren-core = { git = "https://github.com/konnektoren/konnektoren-rs.git", default-features = false, features = [
    "marketplace",
] }
log = "0.4.21"
num-bigint = "0.4.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonlib = { version = "0.17", optional = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
utoipa = { version = "4.2", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "7", features = ["axum"], optional = true }
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
redis = { version = "0.25.4", features = [
    "tokio-comp",
    "json",
], optional = true }
uuid = { version = "1.8.0", features = ["v4"] }
yew-chat = { git = "https://github.com/chriamue/yew-chat", features = [
    "server",
], default-features = false, optional = true }
konnekt-session = { git = "https://github.com/konnektoren/konnekt-session", default-features = false, features = [
    "server",
], optional = true }
opentelemetry = { version = "0.20", features = ["rt-tokio"], optional = true }
opentelemetry_sdk = { version = "0.20", features = [
    "rt-tokio",
], optional = true }
opentelemetry-otlp = { version = "0.13", features = [
    "http-proto",
], optional = true }
opentelemetry-jaeger = { version = "0.19", features = [
    "rt-tokio",
    "collector_client",
    "reqwest_collector_client",
], optional = true }
opentelemetry-prometheus = { version = "0.13", optional = true }
prometheus = { version = "0.13", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "time",
] }
tracing-opentelemetry = { version = "0.21", optional = true }
time = { version = "0.3" }

[dev-dependencies]
mockall = "0.12.1"

[features]
default = ["openapi", "chat", "konnekt-session", "tracing", "metrics"]
openapi = ["utoipa", "utoipa-swagger-ui"]
ton = ["tonlib"]
redis = ["dep:redis"]
chat = ["yew-chat"]
konnekt-session = ["dep:konnekt-session"]
tracing = [
    "opentelemetry/trace",
    "tracing-opentelemetry",
    "opentelemetry-jaeger",
    "tower-http/trace",
]
metrics = [
    "opentelemetry/metrics",
    "opentelemetry_sdk/metrics",
    "opentelemetry-otlp/metrics",
    "opentelemetry-prometheus",
    "prometheus",
]
